# platecli

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  mutation.yml  release.yml
.jules/: bolt.md  sentinel.md
bambu_cli/: AGENTS.md  README.md  ams.py  bambu.py  camera.py  cli.py  commands.py  config.py  constants.py  context.py  download.py  errors.py  job.py  logging_utils.py  netsafety.py  printables.py  printer.py  setup_cmd.py  slicer.py  utils.py
bambu_cli/commands/: __init__.py  device.py  doctor.py  files.py  gcode.py  print_cmd.py  setup_wrappers.py  status.py
bambu_cli/download/: __init__.py  downloader.py  extract.py  naming.py  validation.py
bambu_cli/job/: __init__.py  orchestrate.py  payload.py  predict.py  steps.py  support.py
bambu_cli/protocols/: ftps.py  mqtt.py
bambu_cli/setup_cmd/: __init__.py  common.py  config_cmd.py  migrate.py  preflight.py  wizard.py
bambu_cli/slicer/: __init__.py  cmd.py  options.py  orca.py  output.py  profiles.py  step_convert.py
docs/: api.md  demo-dark.tape  demo-light.tape  demo.tape  doctor-dark.tape  doctor-light.tape  live-printer-smoke.md  manual.md  mutation-baseline.md  quality-roadmap.md  test-backlog.md
docs/schemas/: config_cmd.json  delete.json  doctor.json  download.json  error_envelope.json  gcode.json  job_error.json  job_ok.json  light.json  ok_envelope.json  pause.json  preflight.json  print.json  resume.json  slice.json  slice_list_settings.json  snapshot.json  status.json  status_event.json  version.json
scripts/: clean_artifacts.py  cli_help_smoke.py  run_mutation_baseline.sh  syntax_smoke.py
tests/: agent_cli_smoke.py  bambu_test_base.py  ci_workflow_smoke.py  conftest.py  dependency_resolution_smoke.py  live_printer_smoke.py  package_contents_smoke.py  privacy_smoke.py  python_compat_smoke.py  release_readiness_smoke.py  test_access_code_deprecation.py  test_agent_cli_smoke.py  test_ams.py  test_bambu.py  test_bambu_cli_regressions.py  test_camera.py  test_camera_cmd.py  test_cli.py  test_cli_entry.py  test_config_and_logging.py  test_constants_version.py  test_context.py  test_coverage_boost.py  test_coverage_mega.py  test_coverage_phase_a.py  test_coverage_platform_paths.py  test_coverage_residual_a_plus.py  test_doctor_and_safety.py  test_download_cmd.py  test_download_hardening_p0.py  test_errors.py  test_html_link_scraping.py  test_job.py  test_json_contracts.py  test_mqtt_print_and_setup.py  test_naming_and_validation.py  test_netsafety.py  test_netsafety_handlers.py  test_onboarding.py  test_printer_commands.py  (+9 more)
tests/contracts/: test_schema_validation.py
