[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bambu-local-cli"
version = "0.1.0"
description = "Unofficial local Bambu Lab printer control for agents and humans (not affiliated with Bambu Lab)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "bambu-cli contributors" }]
keywords = ["bambu", "3d-printing", "agent", "cli", "orcaslicer"]
dependencies = [
    "rich>=13.0.0",
  "paho-mqtt>=2.0,<3.0",
  "zeroconf>=0.131,<1.0",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Hardware",
 ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mutmut>=3.0",
]

[project.urls]
Homepage = "https://github.com/DLANSAMA/bambu-local-cli"
Repository = "https://github.com/DLANSAMA/bambu-local-cli"
Issues = "https://github.com/DLANSAMA/bambu-local-cli/issues"
Changelog = "https://github.com/DLANSAMA/bambu-local-cli/blob/main/CHANGELOG.md"

[project.scripts]
bambu-cli = "bambu_cli.bambu:main"

[tool.setuptools]
packages = ["bambu_cli", "bambu_cli.download", "bambu_cli.protocols", "bambu_cli.setup_cmd"]

[tool.ruff]
target-version = "py39"
line-length = 120
extend-exclude = ["docs", "scripts"]

[tool.ruff.lint]
select = ["E9", "F", "B", "PLE", "I", "UP", "SIM"]
# SIM105: try/except-pass is fine; contextlib.suppress adds imports and overhead.
ignore = ["SIM105"]

[tool.ruff.lint.per-file-ignores]
# MQTT callbacks close over per-iteration loop variables deliberately; each
# callback's lifetime ends with its iteration.
"bambu_cli/protocols/mqtt.py" = ["B023"]

[tool.mypy]
# Gradual typing: only the modules listed in CI's mypy step are checked.
# Add a module here + to the CI list once it is fully annotated.
python_version = "3.10"
follow_imports = "silent"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".claude", "scripts"]
# B101 assert; B310 urllib urlopen (custom safe opener handles validation);
# B104 "0.0.0.0" is the unconfigured-printer-IP sentinel, never a bind address;
# B402/B321 the printer only speaks FTPS -- that is the tool's purpose.
skips = ["B101", "B310", "B104", "B402", "B321"]

# Mutation testing (Phase 1 baseline; not CI-gated — see docs/mutation-baseline.md).
# Full slicer.py/job.py mutation is too large for a quick baseline; the reproduce
# script can widen only_mutate later. Baseline targets pure safety gates first.
[tool.mutmut]
source_paths = ["bambu_cli"]
only_mutate = [
    "bambu_cli/download/naming.py",
    "bambu_cli/download/validation.py",
    "bambu_cli/netsafety.py",
    # slicer.py / job.py / download/downloader.py are large; include via:
    #   mutmut run   after temporarily expanding only_mutate (see docs/mutation-baseline.md)
]
# Focused suite for mutation speed (not the full 500+ suite).
pytest_add_cli_args_test_selection = [
    "tests/test_naming_and_validation.py",
    "tests/test_slicer_pure.py",
    "tests/test_job.py",
    "tests/test_netsafety.py",
    "tests/test_netsafety_handlers.py",
    "tests/test_download_hardening_p0.py",
    "tests/test_bambu_cli_regressions.py",
]
pytest_add_cli_args = ["-q", "--tb=no", "-p", "no:cacheprovider"]
